corrected salt grains call in site conf

--- a/salt/web/khanifest/files/khanifest.conf
+++ b/salt/web/khanifest/files/khanifest.conf
@@ -4,7 +4,7 @@ AddType application/x-httpd-php php
 AddType application/x-httpd-php-source phps
 
 
-<VirtualHost {{salt[grains.get]('fqdn', 'khanifest.com')}}:80>
+<VirtualHost {{salt['grains.get']('fqdn', 'khanifest.com')}}:80>
   DocumentRoot /opt/www/khanifest/
 
   <Directory /opt/www/khanifest>
