added settings for apache2

--- a/salt/web/khanifest/files/khanifest.conf
+++ b/salt/web/khanifest/files/khanifest.conf
@@ -8,7 +8,7 @@ AddType application/x-httpd-php-source phps
   DocumentRoot /opt/www/khanifest/
 
   <Directory /opt/www/khanifest>
-
+    Require all granted
   </Directory>
 
 </VirtualHost>
