adding utf-8 setting for apache

--- a/salt/web/khanifest/files/khanifest.conf
+++ b/salt/web/khanifest/files/khanifest.conf
@@ -2,11 +2,11 @@ LoadModule php5_module modules/libphp5.so
 
 AddType application/x-httpd-php php
 AddType application/x-httpd-php-source phps
-
+AddDefaultCharset utf-8
 
 <VirtualHost {{salt['grains.get']('fqdn', 'khanifest.com')}}:80>
   DocumentRoot /opt/www/khanifest/
-
+  AddCharset UTF-8 .utf8
   <Directory /opt/www/khanifest>
     Require all granted
   </Directory>
