added new config for applications

--- a/salt/web/khanifest/files/khanifest.conf
+++ b/salt/web/khanifest/files/khanifest.conf
@@ -11,5 +11,16 @@ AddDefaultCharset utf-8
     Require all granted
   </Directory>
 
+  <Directory /opt/www/khanifest/apps>
+    Order allow,deny
+    allow from all
+    AllowOverride All
+  </Directory>
+
+
+</VirtualHost>
+
+
+
 </VirtualHost>
 
