updating states to latest

--- a/salt/web/khanifest/files/khanifest.conf
+++ b/salt/web/khanifest/files/khanifest.conf
@@ -1,4 +1,4 @@
-LoadModule php5_module modules/libphp5.so
+#LoadModule php7.1_module modules/libphp7.so
 
 AddType application/x-httpd-php php
 AddType application/x-httpd-php-source phps
@@ -9,12 +9,6 @@ AddDefaultCharset utf-8
   AddCharset UTF-8 .utf8
   <Directory /opt/www/khanifest>
     Require all granted
-  </Directory>
-
-  <Directory /opt/www/khanifest/apps>
-    Order allow,deny
-    allow from all
-    AllowOverride All
   </Directory>
 
 
